Spell/Notation checked

--- a/NB_Tutorial.ipynb
+++ b/NB_Tutorial.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Premise\n",
     "\n",
-    "The Naive Bayes classifier is a simple yet powerful probabalistic machine learning model. Using Bayes theorem and conditional probabality calculations, we can find estimates for probabilities that a specific object is of a certain class. Later, we will show how the Naive Bayes classifier can be used for text classification."
+    "The Naive Bayes classifier is a simple yet powerful probabilistic machine learning model. Using Bayes' theorem and conditional probabality calculations, we can find estimates for probabilities that a specific object is of a certain class. Later, we will show how the Naive Bayes classifier can be used for text classification."
    ]
   },
   {
@@ -28,11 +28,11 @@
    "source": [
     "## Derivation\n",
     "\n",
-    "Lets say we have an object $x$ represented as an n-dimensional vector $x = <x_{1}, x_{2}, ..., x_{n}>$. We would like to classify each object $x$ a probability for being in class $C_{k}$, i.e. we would like to find $P(C_{k}|x_{1}, ..., x_{n})$.This probability is likely intractable for high dimensional data (like long sequences of text). So to find this probability, we must first use Bayes theorem. We can rewrite $P(C_{k}|x_{1}, ..., x_{n})$ as $\\frac{P(C_{k})P(x_{1}, ..., x_{n}|C_{k})}{P(x_{1}, ..., x_{n})}$. In other words, we know $P(C_{k}|x_{1}, ..., x_{n}) \\propto P(C_{k})P(x_{1}, ..., x_{n}|C_{k})=P(x_{1}, ..., x_{n},C_{k})$. We can rewrite this joint proability using the chain rule: $P(x_{1}, ..., x_{n},C_{k})=P(x_{1}|x_{2} ..., x_{n},C_{k})P(x_{2} ..., x_{n},C_{k})=P(x_{1}|x_{2} ..., x_{n},C_{k})P(x_{2}| x_{3}, ..., x_{n},C_{k})P(x_{3}, ..., x_{n},C_{k})=...$ Eventually, we get $P(x_{1}, ..., x_{n},C_{k})=P(x_{1}|x_{2} ..., x_{n},C_{k})...P(x_{n-1}|x_{n},C_{k})p(x_{n}|C_{k})p(C_{k})$\n",
+    "Lets say we have an object $\\vec{x}$ represented as an n-dimensional vector $\\vec{x} = <x_{1}, x_{2}, ..., x_{n}>$. We would like to classify each object $\\vec{x}$ a probability for being in class $C_{k}$, i.e. we would like to find $P(C_{k}|x_{1}, ..., x_{n})$.This probability is likely intractable for high dimensional data (like long sequences of text). So to find this probability, we must first use Bayes' theorem. We can rewrite $P(C_{k}|x_{1}, ..., x_{n})$ as $\\frac{P(C_{k})P(x_{1}, ..., x_{n}|C_{k})}{P(x_{1}, ..., x_{n})}$. In other words, we know $P(C_{k}|x_{1}, ..., x_{n}) \\propto P(C_{k})P(x_{1}, ..., x_{n}|C_{k})=P(x_{1}, ..., x_{n},C_{k})$. We can rewrite this joint probability using the chain rule: $P(x_{1}, ..., x_{n},C_{k})=P(x_{1}|x_{2} ..., x_{n},C_{k})P(x_{2} ..., x_{n},C_{k})=P(x_{1}|x_{2} ..., x_{n},C_{k})P(x_{2}| x_{3}, ..., x_{n},C_{k})P(x_{3}, ..., x_{n},C_{k})=...$ Eventually, we get $P(x_{1}, ..., x_{n},C_{k})=P(x_{1}|x_{2} ..., x_{n},C_{k})...P(x_{n-1}|x_{n},C_{k})P(x_{n}|C_{k})P(C_{k})$\n",
     "\n",
-    "This is where we make the naive independent assumption. The naive independent assumption is that each feature in $x$ is mutually independent. This dramatically simplifies the probability expression we are calculating, as now we can assume that $P(x_{i}|x_{i+1},...,x_{n},C_{k})=P(x_{i}|C_{k})$. Now let's go back to our derivation. $P(x_{1}, ..., x_{n},C_{k})=P(x_{1}|x_{2} ..., x_{n},C_{k})...P(x_{n-1}|x_{n},C_{k})p(x_{n}|C_{k})p(C_{k}) \\propto P(x_{1}|C_{k})...P(x_{n-1}|C_{k})p(x_{n}|C_{k})p(C_{k})=p(C_{k})\\Pi p(x_i|C_k)$.\n",
+    "This is where we make the naive independent assumption. The naive independent assumption is that each feature in $\\vec{x}$ is mutually independent. This dramatically simplifies the probability expression we are calculating, as now we can assume that $P(x_{i}|x_{i+1},...,x_{n},C_{k})=P(x_{i}|C_{k})$. Now let's go back to our derivation. $P(x_{1}, ..., x_{n},C_{k})=P(x_{1}|x_{2} ..., x_{n},C_{k})...P(x_{n-1}|x_{n},C_{k})P(x_{n}|C_{k})P(C_{k}) \\propto P(x_{1}|C_{k})...P(x_{n-1}|C_{k})P(x_{n}|C_{k})P(C_{k})=P(C_{k})\\Pi P(x_i|C_k)$.\n",
     "\n",
-    "Let's quickly backtrack. We began by wanting to find the conditional probability that an object $x$ was of class $C_k$. Using Bayes theorem, lots of math, and the naive independent assumption, we find that this probability is proportional to $p(C_{k})\\Pi p(x_i|C_k)$. In plain English, this expression is the probability that any given document is of class $C_{k}$ multiplied by the product that a feature in class $C_k$ is $x_i$. Let's work on an example to combine theory with practice."
+    "Let's quickly backtrack. We began by wanting to find the conditional probability that an object $x$ was of class $C_k$. Using Bayes' theorem, lots of math, and the naive independent assumption, we find that this probability is proportional to $P(C_{k})\\Pi P(x_i|C_k)$. In plain English, this expression is the probability that any given document is of class $C_{k}$ multiplied by the product that a feature in class $C_k$ is $x_i$. Let's work on an example to combine theory with practice."
    ]
   },
   {
@@ -49,9 +49,9 @@
     "\n",
     "EMERGENCY - PLEASE WIRE MONEY\n",
     "\n",
-    "To calculate the probability that this message is of class spam or regular mail, again we must know the proability that any given message is of class spam or regular and the conditional probability of a given word being present given we know that the message is regular or spam. For now, let's say that we receive 40% spam messages and 60% non-spam messages.\n",
+    "To calculate the probability that this message is of class spam or regular mail, again we must know the probability that any given message is of class spam or regular and the conditional probability of a given word being present given we know that the message is regular or spam. For now, let's say that we receive 40% spam messages and 60% non-spam messages.\n",
     "\n",
-    "Now we must calculate the conditional probability that each word in the message will appear given that the message is spam/regular. How do we do this. For example, say the word \"Emergency\" (we'll ignore the caps lock in the email) appears 20 times in 1000 words for regular messages, and appears 8 times in 200 words for spam messages. This means $P(\"Emergency\" | Regular) = 20 / 1000 = .02$ and $P(\"Emergency\" | Spam) = 8 / 200 = .04$ Using this same process, we can calculate the conditional probabilities for each word in the example spam message respective of each class.  \n",
+    "Now we must calculate the conditional probability that each word in the message will appear given that the message is spam/regular. How do we do this. For example, say the word \"Emergency\" (we'll ignore the caps lock in the email) appears 20 times in 1000 words for regular messages, and appears 8 times in 200 words for spam messages. This means $P(Emergency | Regular) = 20 / 1000 = .02$ and $P(Emergency | Spam) = 8 / 200 = .04$ Using this same process, we can calculate the conditional probabilities for each word in the example spam message respective of each class.  \n",
     "\n",
     "$P(Please | Regular) = .08$  \n",
     "$P(Wire | Regular) = .01$  \n",
@@ -61,10 +61,10 @@
     "$P(Money | Spam) = .15$  \n",
     "\n",
     "Now, let's think back to the formula for approximating the lower bound that a message $x$ is of a class $c_{k}$:  \n",
-    "$p(C_{k})\\Pi p(x_i|C_k)$  \n",
-    "Let's apply this proability to probability this message is spam or a regular email.  \n",
-    "$P(Spam|Emergency Please Wire Money) \\propto P(Spam) * P(Emergency | Spam) * P(Please | Spam) * P(Wire | Spam) * P(Money | Spam) = 0.40 * 0.04 * 0.02 * 0.08 * 0.15 = 3.84 * 10^{-6}$  \n",
-    "$P(Regular|Emergency Please Wire Money) \\propto P(Regular) * P(Emergency | Regular) * P(Please | Regular) * P(Wire | Regular) * P(Money | Regular) = 0.60 * 0.02 * 0.08 * 0.01 * 0.02 = 1.92 * 10^{-7}$\n",
+    "$P(C_{k})\\Pi P(x_i|C_k)$  \n",
+    "Let's apply this formula to determine the probability this message is spam or a regular email.  \n",
+    "$P(Spam|Emergency \\, Please \\, Wire \\, Money) \\propto P(Spam) * P(Emergency | Spam) * P(Please | Spam) * P(Wire | Spam) * P(Money | Spam) = 0.40 * 0.04 * 0.02 * 0.08 * 0.15 = 3.84 * 10^{-6}$  \n",
+    "$P(Regular|Emergency \\, Please \\, Wire \\, Money) \\propto P(Regular) * P(Emergency | Regular) * P(Please | Regular) * P(Wire | Regular) * P(Money | Regular) = 0.60 * 0.02 * 0.08 * 0.01 * 0.02 = 1.92 * 10^{-7}$\n",
     "\n",
     "As the value we receive for the spam calculation greater than the value from the regular calculation, we classify the message as spam (which is correct!)."
    ]
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "cO56UWjN0EYw"
    },
@@ -162,12 +162,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, it's important to seperate each .txt file (containing an entire book) into manageable chunks of 500 words. Let's walk through this function. We return to corresponding arrays: authors (containing the author for each chunk) and text_seqs (containing the 500 word chunks). We take a list of file paths as input, along with two conditions: remove_sw and remove_punc. The argument remove_sw removes stopwords (words like \"the\" or \"of\" which theoretically do not tell you too much about an author's distinctive voice) from each chunk of text. For this we use remove_stopwords function from the gensim package. The remove_punc argument, if set to true, indicates to remove all punctuation from each chunk of text. Now, for each file in file_paths, we extract the author from the file name and the text using read file. We then tokenize the text using the nltk package's word_function function. Tokenizing means to seperate a text into each component word (called tokens). Lastly, each tokenizes text is broken into 500-word sequences; the author name and text sequence are then added in order to the authors in tex_seqs lists."
+    "Next, it's important to seperate each .txt file (containing an entire book) into manageable chunks of 500 words. Let's walk through this function. We return two corresponding arrays: authors (containing the author for each chunk) and text_seqs (containing the 500 word chunks). We take a list of file paths as input, along with two conditions: remove_sw and remove_punc. The argument remove_sw removes stopwords (words like \"the\" or \"of\" which theoretically do not tell you too much about an author's distinctive voice) from each chunk of text. For this we use remove_stopwords function from the gensim package. The remove_punc argument, if set to true, indicates to remove all punctuation from each chunk of text. Now, for each file in file_paths, we extract the author from the file name and the text using read file. We then tokenize the text using the nltk package's word_function function. Tokenizing means to separate a text into each component word (called tokens). Lastly, each tokenized text is broken into 500-word sequences; the author name and text sequence are then added in order to the authors in tex_seqs lists."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "AF-V-Y_oC2bW"
    },
@@ -211,12 +211,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we create our Naive Bayes classifier.In the function makeClassifier, we take the type of model and the X and Y output as inputs and return the fitted model. You see that with sklearn, creating the model and training the model is very easy."
+    "Now we create our Naive Bayes classifier. In the function makeClassifier, we take the type of model and the X and Y output as inputs and return the fitted model. You see that with sklearn, creating the model and training the model is very easy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "id": "aL76FIVm07J6"
    },
@@ -242,12 +242,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we will run expiriments to find which models have the best performance. In the expiriment method, we preprocess the data using the expiriments we trained before. Then, we use the CountVectorizer object from sklearn to tokenize the training and the testing objects. We create a fitted multinomial NB classifier and Bernoulli NB classifier in each expiriment. We finally run each model on the testing data and print and record the accuracy."
+    "Now we will run experiments to find which models have the best performance. In the experiment method, we preprocess the data using the methods we discussed before. Then, we use the CountVectorizer object from sklearn to tokenize the training and the testing objects. We create a fitted multinomial NB classifier in each experiment. We finally run each model on the testing data and print and record the accuracy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "id": "CR89tae63r3v"
    },
@@ -258,15 +258,12 @@
      "text": [
       "Edited = False, remove_stopwords = False, remove_punctuation = False\n",
       "Multinomial\n",
-      "accuracy 0.7551020408163265\n",
-      "\n",
-      "Bernoulli\n",
-      "accuracy 0.6908909905425585\n"
+      "accuracy 0.7551020408163265\n"
      ]
     }
    ],
    "source": [
-    "def expiriment(edited, remove_sw, remove_punc):\n",
+    "def experiment(edited, remove_sw, remove_punc):\n",
     "    # Print hyperparamaters\n",
     "    print(\"Edited = \" + str(edited) +\n",
     "          \", remove_stopwords = \" + str(remove_sw) +\n",
@@ -286,7 +283,7 @@
     "    count_vect = CountVectorizer()\n",
     "    X_train_counts = count_vect.fit_transform(corpus)\n",
     "    Y_train_targets = train_authors\n",
-    "    multiClf = makeClassifier(\"Multinomial\", X_train_counts, Y_train_targets)\n",
+    "    multiClf = makeClassifier(X_train_counts, Y_train_targets)\n",
     "    test_corpus = test_text_seqs\n",
     "    X_test_counts = count_vect.transform(test_corpus)\n",
     "    Y_test_targets = test_authors\n",
@@ -297,14 +294,14 @@
     "    print(\"accuracy\", np.mean(Y_test_targets == Y_test_predicted_multi))\n",
     "    return\n",
     "\n",
-    "expiriment(False, False, False)\n",
-    "#expiriment(False, False, True)\n",
-    "#expiriment(False, True, False)\n",
-    "#expiriment(False, True, True)\n",
-    "#expiriment(True, False, False)\n",
-    "#expiriment(True, False, True)\n",
-    "#expiriment(True, True, False)\n",
-    "#expiriment(True, True, True)"
+    "experiment(False, False, False)\n",
+    "#experiment(False, False, True)\n",
+    "#experiment(False, True, False)\n",
+    "#experiment(False, True, True)\n",
+    "#experiment(True, False, False)\n",
+    "#experiment(True, False, True)\n",
+    "#experiment(True, True, False)\n",
+    "#experiment(True, True, True)"
    ]
   },
   {
@@ -355,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
